--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -51,7 +51,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="nameLabel" destination="WXc-yI-jaV" id="Ikq-JX-mrc"/>
-                                    <outlet property="thunbnailImage" destination="J0U-IF-OM2" id="2je-Ub-oQg"/>
+                                    <outlet property="thumbnailImage" destination="J0U-IF-OM2" id="phl-9u-F2P"/>
                                     <segue destination="69X-MI-Y40" kind="show" identifier="PersonDetailSegue" id="aep-F1-uXi"/>
                                 </connections>
                             </tableViewCell>
@@ -74,13 +74,86 @@
                     <view key="view" contentMode="scaleToFill" id="1mz-Hd-8u7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GF0-vq-JGy">
+                                <rect key="frame" x="0.0" y="64" width="375" height="261"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="GF0-vq-JGy" secondAttribute="height" multiplier="375:128" constant="-389.6484375" id="2b5-1R-OgR"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2uV-bw-lkz">
+                                <rect key="frame" x="16" y="333" width="57" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone #:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NVJ-Pl-naA">
+                                <rect key="frame" x="16" y="359" width="100" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="4Dx-3e-xGR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KKU-YC-mCR">
+                                <rect key="frame" x="16" y="385" width="53" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jba-xc-ul2">
+                                <rect key="frame" x="128" y="333" width="239" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y0l-8k-fav">
+                                <rect key="frame" x="128" y="359" width="239" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DeJ-3c-bKl">
+                                <rect key="frame" x="128" y="385" width="239" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Jba-xc-ul2" firstAttribute="top" secondItem="2uV-bw-lkz" secondAttribute="top" id="25T-Wm-dkH"/>
+                            <constraint firstItem="GF0-vq-JGy" firstAttribute="leading" secondItem="dkg-WZ-g0N" secondAttribute="leading" id="2y9-mb-PzG"/>
+                            <constraint firstItem="y0l-8k-fav" firstAttribute="leading" secondItem="NVJ-Pl-naA" secondAttribute="trailing" constant="12" id="Dzt-kr-DVx"/>
+                            <constraint firstItem="2uV-bw-lkz" firstAttribute="leading" secondItem="dkg-WZ-g0N" secondAttribute="leading" constant="16" id="J4w-Zy-0lk"/>
+                            <constraint firstItem="GF0-vq-JGy" firstAttribute="top" secondItem="dkg-WZ-g0N" secondAttribute="top" id="JYg-M0-Mpe"/>
+                            <constraint firstItem="dkg-WZ-g0N" firstAttribute="trailing" secondItem="Jba-xc-ul2" secondAttribute="trailing" constant="8" id="KI5-af-bXU"/>
+                            <constraint firstItem="y0l-8k-fav" firstAttribute="top" secondItem="Jba-xc-ul2" secondAttribute="bottom" constant="2" id="NwN-5S-Ryj"/>
+                            <constraint firstItem="Jba-xc-ul2" firstAttribute="leading" secondItem="y0l-8k-fav" secondAttribute="leading" id="P6e-2d-alR"/>
+                            <constraint firstItem="dkg-WZ-g0N" firstAttribute="trailing" secondItem="GF0-vq-JGy" secondAttribute="trailing" id="QR2-RC-1z7"/>
+                            <constraint firstItem="DeJ-3c-bKl" firstAttribute="leading" secondItem="y0l-8k-fav" secondAttribute="leading" id="W32-f3-Jet"/>
+                            <constraint firstItem="NVJ-Pl-naA" firstAttribute="leading" secondItem="2uV-bw-lkz" secondAttribute="leading" id="Wex-WX-ffw"/>
+                            <constraint firstItem="KKU-YC-mCR" firstAttribute="leading" secondItem="NVJ-Pl-naA" secondAttribute="leading" id="ZNM-ZH-mDJ"/>
+                            <constraint firstItem="DeJ-3c-bKl" firstAttribute="trailing" secondItem="y0l-8k-fav" secondAttribute="trailing" id="ayT-RQ-h97"/>
+                            <constraint firstItem="2uV-bw-lkz" firstAttribute="top" secondItem="GF0-vq-JGy" secondAttribute="bottom" constant="8" id="e1h-HL-Hdf"/>
+                            <constraint firstItem="DeJ-3c-bKl" firstAttribute="top" secondItem="y0l-8k-fav" secondAttribute="bottom" constant="2" id="gNX-Dw-UzC"/>
+                            <constraint firstItem="y0l-8k-fav" firstAttribute="trailing" secondItem="Jba-xc-ul2" secondAttribute="trailing" id="iLn-aY-gxD"/>
+                            <constraint firstItem="KKU-YC-mCR" firstAttribute="top" secondItem="NVJ-Pl-naA" secondAttribute="bottom" constant="2" id="xG0-mv-w4q"/>
+                            <constraint firstItem="NVJ-Pl-naA" firstAttribute="top" secondItem="2uV-bw-lkz" secondAttribute="bottom" constant="2" id="ywU-vZ-XyP"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="dkg-WZ-g0N"/>
                     </view>
+                    <connections>
+                        <outlet property="emailL" destination="DeJ-3c-bKl" id="0Hk-yU-dAn"/>
+                        <outlet property="nameL" destination="Jba-xc-ul2" id="EEe-Aq-T3x"/>
+                        <outlet property="phoneL" destination="y0l-8k-fav" id="Tgb-SW-aKu"/>
+                        <outlet property="photoImageView" destination="GF0-vq-JGy" id="yNZ-7c-5aR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J4q-fa-rVc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1502" y="32"/>
+            <point key="canvasLocation" x="1501.5999999999999" y="31.934032983508249"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ogL-1G-m8p">
